apps/wizarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wizarr
  namespace: apps
  labels:
    app.kubernetes.io/name: wizarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: wizarr
  template:
    metadata:
      labels:
        app: wizarr
        app.kubernetes.io/name: wizarr
    spec:
      containers:
        - name: wizarr
          image: ghcr.io/wizarrrr/wizarr:v2026.9.1
          ports:
            - containerPort: 5690
          volumeMounts:
            - name: database
              mountPath: /data/database
            - name: wizard
              mountPath: /data/wizard_steps
          readinessProbe:
            tcpSocket:
              port: 5690
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 5690
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "1"
              memory: "512Mi"

      volumes:
        - name: database
          persistentVolumeClaim:
            claimName: wizarr-database-pvc
        - name: wizard
          persistentVolumeClaim:
            claimName: wizarr-wizard-pvc
