apps/wizarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wizarr
  namespace: apps
spec:
  selector:
    app: wizarr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5690
  type: ClusterIP
